--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
 </head>
 <body>
   <p><h1><strong><a href="1.html">list</a><u>,</u></strong></h1></p> <br>
-
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/61bf34fa80b2296cfdd26b17/1fn9edt9a';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
   <ul>
      <li><a href="2.html">1. 2021<a></li>
      <li><a href="3.html">2. Diary<a></li>
@@ -16,12 +28,6 @@
   <p style="margin-top:45px;"><h4><u>이 사이트</u>는 나의 <strong>성장일지</strong>이고도 하며
   한편으로는 나의 <strong>종이공책</strong>을 실현화할 <strong><u>촉진제</u>
   </strong>이기도 하다.</h4>
-  <h6><a href="https://www.youtube.com/watch?v=06R8FdoJAzI" target="_blank" title="Think different!!">영상(누르세요-자극)</a></h6></p>
-  <p>
-    <strong>-무형각성제-</strong><br>
-    <iframe width="250" height="150" src="https://www.youtube.com/embed/CYDP_8UTAus"
-    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
-    encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </p>
+  <h6><a href="https://www.youtube.com/watch?v=06R8FdoJAzI" target="_blank" title="Think different!!">영상</a></h6></p>
 </body>
 </html>
