--- a/2.html
+++ b/2.html
@@ -3,6 +3,15 @@
 <head>
   <title>Secret-project for J</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y9YFKSEPYW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y9YFKSEPYW');
+</script>
 </head>
 <body>
   <p><h1><strong><a href="1.html">list</a><u>,</u></strong></h1></p> <br>
