--- a/3.html
+++ b/3.html
@@ -29,7 +29,8 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 <h2><li><a href="3.html">2. Diary</a></li></h2>
-<p style="margin-top:45px;"><h3> 메모장을 추가하는 언어를 만드는 것이 시급하다. 추가하는 버튼과 저장하는 버튼이 있는 형식으로 네이버 메모장 형식을 하고 싶다._<strong>21.12.17</strong> </h3>
+<p style="margin-top:45px;"><h3> 메모장을 추가하는 언어를 만드는 것이 시급하다. 추가하는 버튼과 저장하는 버튼이 있는 형식으로 네이버 메모장 형식을 하고 싶다._<strong>21.12.17</strong> </h3><br>
+  <h3> 내일 어떻게 메모장을 추가하는지 네이버 코드분석 또는 구글 온라인 모임을 통해서 알아야겠다 적지만 html에 대한 강좌를 모두 끝내는 시기가 되었다. 그리고  내일 inframe태그와 article태그가 뭔지 알아봐야겠다._<strong>21.12.19</strong> </h3>
   <img src="diary.jpg" width="100%">
     <ul>
        <h4><li><a href="2.html">1. 2021</a></li></h4>
