--- a/4.html
+++ b/4.html
@@ -14,7 +14,11 @@
 </script>
 </head>
 <body>
-  <p><h1><strong><a href="1.html">list</a><u>,</u></strong></h1></p> <br>
+  <p>
+    <div class="T"><h1><strong><a href="1.html"><font color="red">list</font>
+    </a><font color="brown
+    "><u>,</u></font></strong></h1></div>
+  </p> <br>
   <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -28,7 +32,7 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
-<h2><li><a href="4.html">3. books</a></li></h2>
+<div class="t2"><h2><li><a href="4.html"><font color="orange">3. books</font></a></li></h2></div>
 <p style="margin-top:45px;"><h3><strong>나우시간의 물리학 , 비트코인 , 아인슈타인의 전쟁</strong> </h3>
   <img src="books.jpg" width="40%">
   <p>
@@ -51,10 +55,27 @@ s0.parentNode.insertBefore(s1,s0);
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+<style>
+a {
+  text-decoration: none;
+}
+h1 {
+  text-align: center;
+}
+div.T {
+  font-size: 85px; font-style:italic;
+}
+div.t2 {
+  font-size: 40px;
+}
+
+</style>
   </p>
+
      <ul>
-       <h4><li><a href="2.html">1. 2021</a></li></h4>
-       <h4><li><a href="3.html">2. Diary</a></li></h4>
+       <h4><li><a href="2.html"><font color="blue">1. 2021</font></a></li></h4>
+       <h4><li><a href="3.html"><font color="blue">2. Diary</font></a></li></h4>
     </ul>
 </body>
 </html>
