--- a/1.html
+++ b/1.html
@@ -14,7 +14,11 @@
 </script>
 </head>
 <body>
-  <p><h1><strong><a href="1.html">list</a><u>,</u></strong></h1></p> <br>
+  <p>
+      <div class="T"><h1><strong><a href="1.html"><font color="red">list</font></a>
+        <font color="brown"><u>,</u>
+        </font></strong></h1></div>
+  </p> <br>
   <!--Start of Tawk.to Script-->
   <script type="text/javascript">
   var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -28,18 +32,37 @@
   })();
   </script>
   <!--End of Tawk.to Script-->
+  <style>
+      a {
+        color:blue;  text-decoration: none;
+   }
+      h1 {
+        text-align: center;
+      }
+      div.T {
+        font-size: 30px; font-style:italic;
+      }
+
+  </style>
   <ul>
      <li><a href="2.html">1. 2021<a></li>
      <li><a href="3.html">2. Diary<a></li>
      <li><a href="4.html">3. Books<a></li>
   </ul>
+<!--
+  <ul>
+     <li><a href="2.html"><font color="blue">. 2021</font><a></li>
+     <li><a href="3.html"><font color="blue">2. Diary</font><a></li>
+     <li><a href="4.html"><font color="blue">3. Books</font><a></li>
+  </ul>
+-->
   <img src="selfdevelopment img.jpg" width="50%">
   <p style="margin-top:45px;"><h4><u>이 사이트</u>는 나의 <strong>성장일지</strong>이고도 하며
   한편으로는 나의 <strong>종이공책</strong>을 실현화할 <strong><u>촉진제</u>
   </strong>이기도 하다.</h4>
   <h6><a href="https://www.youtube.com/watch?v=06R8FdoJAzI" target="_blank" title="Think different!!">영상(누르세요-자극)</a></h6></p>
   <p>
-    <strong>-무형각성제-</strong><br>
+    <strong><a style="text-align: center;">-무형각성제-</a></strong><br>
     <iframe width="250" height="150" src="https://www.youtube.com/embed/CYDP_8UTAus"
     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
     encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
