--- a/2.html
+++ b/2.html
@@ -14,7 +14,13 @@
 </script>
 </head>
 <body>
-  <p><h1><strong><a href="1.html">list</a><u>,</u></strong></h1></p> <br>
+  <p>
+    <div class="T"><h1><strong><a href="1.html"><font color="red">list</font>
+    </a><font color="brown
+    "><u>,</u></font></strong></h1></div>
+  </p> <br>
+
+
   <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -28,16 +34,32 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
-  <h2><li><a href="2.html">1. 2021</a></li></h2>
+
+
+  <div class="t2"><h2><li><a href="2.html"><font color="orange">1. 2021</font></a></li></h2></div>
   <p style="margin-top:45px;"><h3>고등학교 3학년 대학입시를 위한 가장 중요한 시간이면서
   치열하다면 치열했던 좋은 경험을 할 수 있었던 시기였던 것 같다. </h3>
-  <img src="he,story.jpg" width="100%">
+  <img src="he,story.jpg" width="70%">
+<style>
+a {
+  text-decoration: none;
+}
+h1 {
+  text-align: center;
+}
+div.T {
+  font-size: 85px; font-style:italic;
+}
+div.t2 {
+  font-size: 40px;
+}
+
+</style>
 
 <ul>
-     <h4><li><a href="3.html">2. Diary</a></li></h4>
-     <h4><li><a href="4.html">3. books</a></li></h4>
+     <h4><li><a href="3.html"><font color="blue">2. Diary<font></a></li></h4>
+     <h4><li><a href="4.html"><font color="blue">3. books<font></a></li></h4>
 </ul>
 
 </body>
 </html>
-s
