--- a/3.html
+++ b/3.html
@@ -14,7 +14,11 @@
 </script>
 </head>
 <body>
-  <p><h1><strong><a href="1.html">list</a><u>,</u></strong></h1></p> <br>
+  <p>
+    <div class="T"><h1><strong><a href="1.html"><font color="red">list</font>
+    </a><font color="brown
+    "><u>,</u></font></strong></h1></div>
+  </p> <br>
   <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -28,13 +32,35 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
-<h2><li><a href="3.html">2. Diary</a></li></h2>
-<p style="margin-top:45px;"><h3> 메모장을 추가하는 언어를 만드는 것이 시급하다. 추가하는 버튼과 저장하는 버튼이 있는 형식으로 네이버 메모장 형식을 하고 싶다._<strong>21.12.17</strong> </h3><br>
-  <h3> 내일 어떻게 메모장을 추가하는지 네이버 코드분석 또는 구글 온라인 모임을 통해서 알아야겠다 적지만 html에 대한 강좌를 모두 끝내는 시기가 되었다. 그리고  내일 inframe태그와 article태그가 뭔지 알아봐야겠다._<strong>21.12.19</strong> </h3>
+
+
+<div class="t2"><h2><li><a href="3.html"><font color="orange">2. Diary</font></a></li></h2></div>
+
+
+<p style="margin-top:45px;"><h3> 메모장을 추가하는 언어를 만드는 것이 시급하다. 추가하는 버튼과 저장하는 버튼이 있는 형식으로 네이버 메모장 형식을 하고 싶다._<strong style="color: green;">21.12.17</strong> </h3><br>
+  <h3> 내일 어떻게 메모장을 추가하는지 네이버 코드분석 또는 구글 온라인 모임을 통해서 알아야겠다 적지만 html에 대한 강좌를 모두 끝내는 시기가 되었다. 그리고  내일 inframe태그와 article태그가 뭔지 알아봐야겠다._<strong style="color: green;">21.12.19</strong> </h3><br>
+  <h3> 오늘 처음으로 css를 알게되었다. 비록 어제 목표하던 메모장에 대한 단서를 얻지 못했지만 색깔을 바꾸고 위치를 바꾸는 등 더 멀리 나아가 property 검색방식을 알게 되었다. 또한 태한 태그를 외어야만 하겠다는 강박에서
+    오는 뇌의 혹사를 피해야하는 이유를 알게 되었으며 외우는 짓은 현명하지 못하다는 것을 알게되었다. 이런 깨달음은 현재 나의 학습태도가 암기형식에 잠식되어있음을 경고 시켜주었다. 내일의 계획이 있다면 css강좌를 마무리하고 싶을 따름이다._<strong style="color: green;">21.12.20</strong> </h3>
   <img src="diary.jpg" width="100%">
+  <style>
+  a {
+    text-decoration: none;
+  }
+  h1 {
+    text-align: center;
+  }
+  div.T {
+    font-size: 85px; font-style:italic;
+  }
+  div.t2 {
+    font-size: 40px;
+  }
+
+  </style>
+
     <ul>
-       <h4><li><a href="2.html">1. 2021</a></li></h4>
-       <h4><li><a href="4.html">3. books</a></li></h4>
+       <h4><li><a href="2.html"><font color="blue">1. 2021</font></a></li></h4>
+       <h4><li><a href="4.html"><font color="blue">3. books</font></a></li></h4>
     </ul>
 </body>
 </html>
