--- a/1.html
+++ b/1.html
@@ -40,7 +40,7 @@
         text-align: center;
       }
       div.T {
-        font-size: 85px; font-style:italic;
+        font-size: 85px; font-style:italic; border-bottom: 5px brown solid; margin: -15px;
       }
 
   </style>
