--- a/1.html
+++ b/1.html
@@ -15,9 +15,9 @@
 </head>
 <body>
   <p>
-      <div class="T"><h1><strong><a href="1.html"><font color="red">list</font></a>
+      <h1><strong><a href="1.html" class="T"><font color="red">list</font></a>
         <font color="brown"><u>,</u>
-        </font></strong></h1></div>
+        </font></strong></h1>
   </p> <br>
   <!--Start of Tawk.to Script-->
   <script type="text/javascript">
@@ -34,13 +34,13 @@
   <!--End of Tawk.to Script-->
   <style>
       a {
-        color:blue;  text-decoration: none;
+        color:orange;  text-decoration: none;
    }
       h1 {
         text-align: center;
-      }
-      div.T {
-        font-size: 85px; font-style:italic; border-bottom: 5px brown solid; margin: -15px;
+
+        font-size: 85px; font-style:italic; margin: 0px;
+         padding: 20px; border-bottom: 5px red solid;
       }
 
   </style>
