--- a/2.html
+++ b/2.html
@@ -36,7 +36,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 
 
-  <div class="t2"><h2><li><a href="2.html"><font color="orange">1. 2021</font></a></li></h2></div>
+  <div class="t2"><h2><li><a href="2.html"><font color="brown">1. 2021</font></a></li></h2></div>
   <p style="margin-top:45px;"><h3>고등학교 3학년 대학입시를 위한 가장 중요한 시간이면서
   치열하다면 치열했던 좋은 경험을 할 수 있었던 시기였던 것 같다. </h3>
   <img src="he,story.jpg" width="70%">
@@ -45,7 +45,8 @@ a {
   text-decoration: none;
 }
 h1 {
-  text-align: center;
+  text-align: center; margin: 0px;
+   padding: 20px; border-bottom: 5px red solid;
 }
 div.T {
   font-size: 85px; font-style:italic;
@@ -57,8 +58,8 @@ div.t2 {
 </style>
 
 <ul>
-     <h4><li><a href="3.html"><font color="blue">2. Diary<font></a></li></h4>
-     <h4><li><a href="4.html"><font color="blue">3. books<font></a></li></h4>
+     <h4><li><a href="3.html"><font color="orange">2. Diary<font></a></li></h4>
+     <h4><li><a href="4.html"><font color="orange">3. books<font></a></li></h4>
 </ul>
 
 </body>
