--- a/3.html
+++ b/3.html
@@ -34,7 +34,7 @@ s0.parentNode.insertBefore(s1,s0);
 <!--End of Tawk.to Script-->
 
 
-<div class="t2"><h2><li><a href="3.html"><font color="orange">2. Diary</font></a></li></h2></div>
+<div class="t2"><h2><li><a href="3.html"><font color="brown">2. Diary</font></a></li></h2></div>
 
 
 <p style="margin-top:45px;"><h3> 메모장을 추가하는 언어를 만드는 것이 시급하다. 추가하는 버튼과 저장하는 버튼이 있는 형식으로 네이버 메모장 형식을 하고 싶다._<strong style="color: green;">21.12.17</strong> </h3><br>
@@ -47,7 +47,8 @@ s0.parentNode.insertBefore(s1,s0);
     text-decoration: none;
   }
   h1 {
-    text-align: center;
+    text-align: center; margin: 0px;
+     padding: 20px; border-bottom: 5px red solid;
   }
   div.T {
     font-size: 85px; font-style:italic;
@@ -59,8 +60,8 @@ s0.parentNode.insertBefore(s1,s0);
   </style>
 
     <ul>
-       <h4><li><a href="2.html"><font color="blue">1. 2021</font></a></li></h4>
-       <h4><li><a href="4.html"><font color="blue">3. books</font></a></li></h4>
+       <h4><li><a href="2.html"><font color="orange">1. 2021</font></a></li></h4>
+       <h4><li><a href="4.html"><font color="orange">3. books</font></a></li></h4>
     </ul>
 </body>
 </html>
