--- a/4.html
+++ b/4.html
@@ -32,7 +32,7 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
-<div class="t2"><h2><li><a href="4.html"><font color="orange">3. books</font></a></li></h2></div>
+<div class="t2"><h2><li><a href="4.html"><font color="brown">3. books</font></a></li></h2></div>
 <p style="margin-top:45px;"><h3><strong>나우시간의 물리학 , 비트코인 , 아인슈타인의 전쟁</strong> </h3>
   <img src="books.jpg" width="40%">
   <p>
@@ -61,7 +61,8 @@ a {
   text-decoration: none;
 }
 h1 {
-  text-align: center;
+  text-align: center; margin: 0px;
+   padding: 20px; border-bottom: 5px red solid;
 }
 div.T {
   font-size: 85px; font-style:italic;
@@ -74,8 +75,8 @@ div.t2 {
   </p>
 
      <ul>
-       <h4><li><a href="2.html"><font color="blue">1. 2021</font></a></li></h4>
-       <h4><li><a href="3.html"><font color="blue">2. Diary</font></a></li></h4>
+       <h4><li><a href="2.html"><font color="orange">1. 2021</font></a></li></h4>
+       <h4><li><a href="3.html"><font color="orange">2. Diary</font></a></li></h4>
     </ul>
 </body>
 </html>
